<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="15dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_amount" />

    <EditText
        android:id="@+id/textLoanAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginLeft="48dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textLoanAmount"
        android:layout_marginTop="22dp"
        android:text="@string/loan_type" />

    <Spinner
        android:id="@+id/spinnerLoanType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLoanAmount"
        android:layout_alignTop="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/spinnerLoanType"
        android:layout_marginTop="14dp"
        android:text="@string/loan_duration" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/spinnerLoanType"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView1" >

        <EditText
            android:id="@+id/textDurationPeriod"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.78"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinnerTimePeriod"
            android:layout_width="48dp"
            android:layout_height="43dp"
            android:layout_weight="0.55" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="96dp"
        android:onClick="onSubmit"
        android:text="@string/button_submit" />

</RelativeLayout>